# MultiWriter

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
config/prompts/: character.txt  character_planner.txt  idea_generator.txt  narrative_architect.txt  scene_dynamics.txt  theme_guardian.txt  theme_premise.txt  worldbuilding.txt
docs/: AGENT_IMPLEMENTATION_ROADMAP.md  ALL_AGENTS_REFERENCE.md  CLEANUP_SUMMARY.md  COMPLETE_PLANNING_AGENTS.md  IMPLEMENTATION_PLAN.md  INFRASTRUCTURE_IMPLEMENTATION_PLAN.md  INFRASTRUCTURE_IMPLEMENTATION_SUMMARY.md  ITERATIVE_LOOP_IMPLEMENTATION.md  MultiAgent_Storyteller_Proposal.md  NEO4J_SETUP.md  PLANNING_AGENTS_INTEGRATION.md  Project_Overview.md  _Project_Vision.md
multiwriter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: __init__.py
src/agents/: __init__.py  base.py  character.py  character_planner.py  coverage_verifier.py  foreshadowing_agent.py  idea_generator.py  narrative_architect.py  outline_architect.py  pacing_agent.py  scene_dynamics.py  synthesis.py  theme_guardian.py  theme_premise.py  timeline_manager.py  worldbuilding.py
src/api/: __init__.py  planning.py
src/cli/: __init__.py  main.py
src/export/: __init__.py  markdown.py
src/llm/: __init__.py  ollama_client.py  provider.py
src/memory/: __init__.py  graph_store.py  in_memory_graph.py  local_storage.py  neo4j_graph.py  object_store.py  rag_retrieval.py  (+2 more)
tests/: __init__.py  test_entity_id_validation.py  test_integration.py  test_models.py  test_rag_integration.py  test_schemas.py
(+28 files in other folders)
