[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "multiwriter"
version = "0.1.0"
description = "Multi-Agent AI Novel Outline Generator"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "MultiWriter Team" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "ollama>=0.1.0",
    "boto3>=1.34.0",
    "qdrant-client>=1.7.0",
    "neo4j>=5.15.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.12.0",
    "mypy>=1.7.0",
]

[project.scripts]
multiwriter = "src.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
